tests/src/frontend/typechecking/exhaustiveness/invalid/when_pattern_usefulness.sk
fun shouldFail(): void {
  2 match {
  | _ -> void
  | x if (x == 2) -> void
  }
}
